# Hands-On-Microservices-with-Rust

./: .gitignore
ch02-01-hyper-microservice-tinyserver/: Cargo.toml
ch02-01-hyper-microservice-tinyserver/src/: main.rs
ch02-02-hyper-microservice-with-handlers/: Cargo.toml
ch02-02-hyper-microservice-with-handlers/src/: main.rs
ch02-03-hyper-microservice-rest/: Cargo.toml
ch02-03-hyper-microservice-rest/src/: main.rs
ch02-04-hyper-microservice-rest-regex/: Cargo.toml
ch02-04-hyper-microservice-rest-regex/src/: main.rs
ch03-01-random-service/: Cargo.toml
ch03-01-random-service/src/: main.rs
ch03-03-random-service-with-env/: Cargo.toml
ch03-03-random-service-with-env/src/: main.rs
ch03-04-random-service-with-args/: Cargo.toml
ch03-04-random-service-with-args/src/: main.rs
ch03-05-random-service-with-config/: Cargo.toml
ch03-05-random-service-with-config/src/: main.rs
ch03-log-cfg_01-random-service/: Cargo.toml
ch03-log-cfg_02-random-service-with-logging/: Cargo.toml
ch03-log-cfg_02-random-service-with-logging/src/: main.rs
ch04-01-random-service-with-parameters/: Cargo.toml  test.sh
ch04-01-random-service-with-parameters/src/: main.rs
ch04-02-random-service-with-shuffle/: Cargo.toml
ch04-03-random-service-with-multiple-formats/: Cargo.toml
