[package]
name = "hyper-microservice-rest-regex"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"

[dependencies]
#futures = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
slab = "0.4"
lazy_static = "1"
regex = "1"
