[package]
name = "random-service-with-config"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.32"

pretty_env_logger = "0.4"
env_logger = "0.10"
dotenv = "0.15"
log = "0.4"

tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"

serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
