[package]
name = "random-service-with-parameters"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
#hyper = "0.12"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

rand = "0.5"
#rand = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

log = "0.4"
dotenv = "0.15"
env_logger = "0.10"
pretty_env_logger = "0.4"

